--- a/communityService/src/main/resources/application.properties
+++ b/communityService/src/main/resources/application.properties
@@ -1,4 +1,17 @@
 # ----------------------------------------
+# Apache Kafka properties
+# ----------------------------------------
+
+spring.kafka.consumer.group-id=mygroup
+spring.kafka.consumer.auto-offset-reset=earliest
+spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
+spring.kafka.consumer.value-deserializer=org.apache.kafka.common.serialization.StringDeserializer
+
+spring.kafka.producer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
+spring.kafka.producer.value-deserializer=org.apache.kafka.common.serialization.StringDeserializer
+
+
+# ----------------------------------------
 # MySQL DataBase Connection Properties
 # ----------------------------------------
 
